removed commented code blocks

--- a/Slug_Datavis.ipynb
+++ b/Slug_Datavis.ipynb
@@ -489,15 +489,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# batstats.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -1380,24 +1371,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pencehu_stats.yearID == 2011\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pencehu_stats.yearID == 2012"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -1414,8 +1387,7 @@
    ],
    "source": [
     "penceh_arr = pencehu_stats.to_numpy()\n",
-    "len(penceh_arr)\n",
-    "# penceh_arr"
+    "len(penceh_arr)\n"
    ]
   },
   {
