--- a/psbat_analysis.ipynb
+++ b/psbat_analysis.ipynb
@@ -11,7 +11,10 @@
     "import numpy as np\n",
     "\n",
     "# CSV reader\n",
-    "import csv"
+    "import csv\n",
+    "\n",
+    "# VisC\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -643,15 +646,6 @@
    ],
    "source": [
     "psbat.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
    ]
   },
   {
